--- a/MVC5TDDExperiments/Views/Home/FindByGenre.cshtml
+++ b/MVC5TDDExperiments/Views/Home/FindByGenre.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MVC5TDDExperiments.Models.Book>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "FindByGenre";
 }
 
-<h2>Index</h2>
+<h2>FindByGenre</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
