--- a/MVC5TDDExperiments/Views/Home/Index.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Genre)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Author)
+            @Html.DisplayFor(modelItem => item.Author.FullName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.BookId }) |
