partial view for authors information in book detail view

--- a/MVC5TDDExperiments/Views/Home/Details.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Details.cshtml
@@ -26,14 +26,7 @@
         <dd>
             @Html.DisplayFor(model => model.Genre)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Author.FullName)
-        </dd>
+        @Html.Partial("_Authors", @Model.Author)
     </dl>
 </div>
 <p>
