--- a/MVC5TDDExperiments/Views/Home/Create.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC5TDDExperiments.Models.Book
+﻿@model MVC5TDDExperiments.Models.ViewModels.BookEditViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -31,10 +31,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AuthorId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Author, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(m => m.AuthorId, Model.Authors, "<select an author>", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AuthorId, "", new { @class = "text-danger" })
             </div>
         </div>
 
