--- a/MVC5TDDExperiments/Views/Home/Index.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Index</h2>
 <p style="color:red;">@ViewBag.Message</p>
+<p style="color:red;">@TempData["Message"]</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
