add default users and role into the DB and restrict access to creation for admin role

--- a/MVC5TDDExperiments/Views/Home/Index.cshtml
+++ b/MVC5TDDExperiments/Views/Home/Index.cshtml
@@ -8,7 +8,10 @@
 <p style="color:red;">@ViewBag.Message</p>
 <p style="color:red;">@TempData["Message"]</p>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @if (User.IsInRole("administrator"))
+    {
+        @Html.ActionLink("Create New", "Create")
+    }
 </p>
 <table class="table">
     <tr>
